--- a/src/assets/scss/01_base/_icons.scss
+++ b/src/assets/scss/01_base/_icons.scss
@@ -101,7 +101,8 @@ $icons: (
 	graph:                 \e931,
 	document-warning:      \e932,
 	document-down:         \e933,
-	document-success:      \e934
+	document-success:      \e934,
+	arrow-down:            \e935
 );
 
 // Icons aplication to class
