--- a/src/assets/scss/01_base/_variables.scss
+++ b/src/assets/scss/01_base/_variables.scss
@@ -184,6 +184,7 @@ $checklist-lp-before-size:         50px;
 
 $border-radius:                    5px;
 $box-shadow:                       0 2px 5px 0 rgba($body-color, .16);
+$box-shadow-interactive:           0 10px 30px 0 rgba($body-color, .2);
 $box-shadow-circle:                -10px 20px 56px 0 rgba($box-shadow-color, .15);
 
 $box-shadow-carousel:              -15px 20px 30px 0 rgba(0, 9, 16, .1);
