--- a/src/app/pages/admins/ask-for-offer/ask-for-offer.component.html
+++ b/src/app/pages/admins/ask-for-offer/ask-for-offer.component.html
@@ -11,7 +11,7 @@
             type="icon"
             icon="icon--delete"
             variant="icon"
-            title="Zamítnout"
+            title="Odstranit"
             (action)="delete(row.id)"
         ></lnd-button>
     </div>
