--- a/src/app/pages/admins/create-user/recapitulation/recapitulation.component.html
+++ b/src/app/pages/admins/create-user/recapitulation/recapitulation.component.html
@@ -1,27 +1,30 @@
-<div class="col-12 col-xl-10 offset-xl-1">
-    <div *ngIf="supplyPoint"
-         class="row align-items-center mb-3">
-        <div class="col-12 mb-5 col-md-3 mb-md-0 text-center text-md-left">
-            <lnd-button
-                label="Krok zpět"
-                type="secondary"
-                (action)="backStep()">
-            </lnd-button>
+<ng-container *ngIf="supplyPoint$ | async as supplyPoint">
+    <div class="col-12 col-xl-10 offset-xl-1">
+        <div *ngIf="supplyPoint"
+             class="row align-items-center mb-3">
+            <div class="col-12 mb-5 col-md-3 mb-md-0 text-center text-md-left">
+                <lnd-button
+                    label="Krok zpět"
+                    type="secondary"
+                    (action)="backStep()">
+                </lnd-button>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-12 col-xl-10 offset-xl-1" *ngIf="supplyPoint">
-    <div class="page-box">
-        <pxe-personal-info-form
-            [supplyPoint]="supplyPoint"
-            [codeLists]="codeLists"
-            [withPrefillFromProfile]="false"
-            [isIndividual]="isIndividual"
-            [fieldError]="fieldError"
-            [formFields]="formFields"
-            [formLoading]="formLoading"
-            [globalError]="globalError"
-            (submitAction)="submit($event)">
-        ></pxe-personal-info-form>
+    <div class="col-12 col-xl-10 offset-xl-1">
+        <div class="page-box">
+            <pxe-personal-info-form
+                [supplyPoint]="supplyPoint"
+                [codeLists]="codeLists"
+                [withPrefillFromProfile]="false"
+                [isIndividual]="subjectType.SUBJECT_TYPE_INDIVIDUAL === supplyPoint.subject.code"
+                [fieldError]="fieldError"
+                [formFields]="formFields"
+                [formValues]="supplyPoint.contract.personalData"
+                [formLoading]="formLoading"
+                [globalError]="globalError"
+                (submitAction)="submit($event, supplyPoint)">
+            </pxe-personal-info-form>
+        </div>
     </div>
-</div>
+</ng-container>
