--- a/src/app/pages/admins/ask-for-offer/ask-for-offer.component.html
+++ b/src/app/pages/admins/ask-for-offer/ask-for-offer.component.html
@@ -41,9 +41,9 @@
                 </ng-container>
             </lnd-alert>
         </div>
-        <div class="col-12">
-            <lnd-placeloader [loading]="loading"></lnd-placeloader>
-        </div>
+<!--        <div class="col-12">NO NEED-->
+<!--            <lnd-placeloader [loading]="loading"></lnd-placeloader>-->
+<!--        </div>-->
         <div *ngIf="paginatedAskForOffer"
              class="col-12">
             <ng-container *ngIf="paginatedAskForOffer.page.length > 0">
