--- a/src/app/pages/admins/create-user/supply-point/supply-point.component.html
+++ b/src/app/pages/admins/create-user/supply-point/supply-point.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-12">
-        <p class="perex mb-4">
+        <p class="perex mb-4"
+           [class.text-center]="supplyPointsImport$ | async">
             Zadejte údaje k odběrnému místu
         </p>
     </div>
