--- a/src/app/pages/admins/create-user/prices/prices.component.html
+++ b/src/app/pages/admins/create-user/prices/prices.component.html
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div>
-    <div class="col-12 col-xl-10 offset-xl-1">
+    <div class="col-12">
         <div class="page-box">
             <pxe-price-form
                 [supplyPoint]="supplyPoint"
