--- a/src/app/pages/admins/create-user/recapitulation/recapitulation.component.html
+++ b/src/app/pages/admins/create-user/recapitulation/recapitulation.component.html
@@ -11,6 +11,7 @@
     </div>
     <div class="page-box">
         <pxe-personal-info-form
+            *ngIf="codeLists"
             [supplyPoint]="supplyPoint"
             [codeLists]="codeLists"
             [withPrefillFromProfile]="false"
