--- a/src/common/ui/micro-table/micro-table.component.html
+++ b/src/common/ui/micro-table/micro-table.component.html
@@ -1,11 +1,13 @@
-<div class="micro-table">
-    <div class="micro-table--title">
-        {{title}}
-    </div>
-    <div class="micro-table--row" *ngFor="let item of data">
-        {{item.label}}
-        <ng-container *ngIf="actionTemplates">
-            <ng-container *ngTemplateOutlet="actionTemplates; context: {data: item.data}"></ng-container>
-        </ng-container>
-    </div>
+<div class="micro-table--title">
+    {{title}}
 </div>
+<ul class="list-of-supply-points">
+    <li class="list__item" *ngFor="let item of data">
+        <span class="list__item-title">{{item.label}}</span>
+        <div class="list__item-controls">
+            <ng-container *ngIf="actionTemplates">
+                <ng-container *ngTemplateOutlet="actionTemplates; context: {data: item.data}"></ng-container>
+            </ng-container>
+        </div>
+    </li>
+</ul>
