--- a/src/common/ui/card/card.component.html
+++ b/src/common/ui/card/card.component.html
@@ -1,30 +1,3 @@
-<!-- <div class="card" (click)="clickAction.emit(data)">
-     <div class="card__img-holder">
-        <img
-            [src]="data.img"
-            [attr.title]="data.imgTitle"
-            [attr.alt]="data.imgAlt"
-            class="card-img-top">
-     </div>
-    <div
-        class="card-body w-100">
-        <div
-            *ngIf="data.title"
-            class="card-text-prefix mb-1">
-            {{ data.textPrefix }}
-        </div>
-        <h3 *ngIf="data.title"
-            class="h3--public mb-1">
-            {{ data.title }}
-        </h3>
-        <p
-            *ngIf="data.content"
-            class="card-text"
-            [innerHTML]="data.content">
-        </p>
-    </div>
-</div> -->
-
 <ng-template #content>
    <div class="card__img-holder">
        <img
@@ -52,17 +25,15 @@
    </div>
 </ng-template>
 
-<div 
+<div
     *ngIf="type === 'block'"
     class="card"
 >
    <ng-container *ngTemplateOutlet="content"></ng-container>
 </div>
-<a 
-    *ngIf="type === 'link'"
-    class="card"
-    (click)="clickAction.emit(data)"
->
-   <ng-container *ngTemplateOutlet="content"></ng-container>
-</a>
 
+<a *ngIf="type === 'link'"
+   class="card"
+   [routerLink]="linkUrl">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+</a>
