PXEPR-1274-blog minor fix

--- a/src/assets/scss/01_base/_mixins.scss
+++ b/src/assets/scss/01_base/_mixins.scss
@@ -272,6 +272,26 @@
 
 
 /*
+ - Mixin for link
+ */
+
+@mixin link() {
+	&,
+	&:visited {
+		@content;
+	}
+}
+
+@mixin link-interactive() {
+	&.focus,
+	&:focus,
+	&:hover {
+		@content;
+	}
+}
+
+
+/*
  - Mixin for link without [href]
  */
 
