--- a/src/assets/scss/01_base/_utilities.scss
+++ b/src/assets/scss/01_base/_utilities.scss
@@ -408,3 +408,11 @@ $colors: (
 	table-layout: fixed;
 }
 
+.text-overflow-ellipsis {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.link-color {
+	color: $link-color;
+}
