--- a/src/common/ui/micro-table/micro-table.component.html
+++ b/src/common/ui/micro-table/micro-table.component.html
@@ -1,5 +1,7 @@
 <ul class="list-of-supply-points">
-    <li class="list-of-supply-points__item" *ngFor="let item of data">
+    <li *ngFor="let item of data"
+        [class.list-of-supply-points__item--active]="item.active"
+        class="list-of-supply-points__item">
         <span class="list-of-supply-points__item-title">{{item.label}}</span>
         <div class="list-of-supply-points__item-controls">
             <ng-container *ngIf="actionTemplates">
