--- a/src/app/pages/admins/create-user/prices/prices.component.html
+++ b/src/app/pages/admins/create-user/prices/prices.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="supplyPoint$ | async as supplyPoint ">
-    <div class="col-12 col-xl-10 offset-xl-1">
+    <div class="col-12">
         <div *ngIf="supplyPoint"
              class="row align-items-center mb-3">
             <div class="col-12 mb-5 col-md-3 mb-md-0 text-center text-md-left">
