feature/PXEPR-1245-bugs
commit

--- a/src/app/pages/admins/create-user/supply-point/supply-point.component.html
+++ b/src/app/pages/admins/create-user/supply-point/supply-point.component.html
@@ -7,6 +7,7 @@
     </div>
     <ng-container *ngIf="(queryParams$ | async).askForOfferId as activeAskForOfferId">
         <div class="col-12" *ngIf="(activeSupplyPoint$ | async) as activeSupplyPoint">
+            {{activeSupplyPoint | json}}
             <pxe-supply-point-form
                 [editMode]="editMode"
                 [withoutValidator]="true"
