--- a/src/app/pages/public/landing/landing.component.html
+++ b/src/app/pages/public/landing/landing.component.html
@@ -1,5 +1,5 @@
 <ng-template #accordionTemplate let-data>
-    <div [innerHTML]="data.shortContent"></div>
+    <div [innerHTML]="data.shortContent | htmlContent"></div>
     <div *ngIf="data.fullContent">
         <a class="link"
            [routerLink]="['/', CONSTS.PATHS.FAQ, data.tag[0].url , data.url]">
