feature/PXEPR-1245-test-fixes

--- a/src/app/pages/admins/create-user/prices/prices.component.html
+++ b/src/app/pages/admins/create-user/prices/prices.component.html
@@ -14,6 +14,7 @@
     <div class="col-12">
         <div class="page-box">
             <pxe-price-form
+                [codeLists]="codeLists$ | async"
                 [supplyPoint]="supplyPoint"
                 [formFields]="formFields"
                 [formLoading]="formLoading"
